...
            0 -> {
                TextField(
                    value = searchString,
                    onValueChange = onSearch,
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("search field")
                )
                when (searchState) {
                    LoadingSearchStates.Loading -> LoadingComponent()
                    LoadingSearchStates.Empty -> EmptyComponent()
                    is LoadingSearchStates.Error -> ErrorComponent(searchState.message, onRetry)
                    is LoadingSearchStates.Ok -> {
...
